Bug fix for dark mode

--- a/static/assets/css/microblog.css
+++ b/static/assets/css/microblog.css
@@ -8,3 +8,5 @@
 #list_results p a {
     text-decoration: underline;
 }
+
+.dark header .main-nav ul li a { color: #fff; }
